another test using Droid edit

--- a/_posts/2018-02-06-A-Test.md
+++ b/_posts/2018-02-06-A-Test.md
@@ -1,3 +1,6 @@
 ## A Test Post
 written in vim/termux on my tablet. 
-Written in DroidEdit
+Written in DroidEdit.
+
+### Another Test
+does this work?
